--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+_site
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
+vendor
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +132,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+_site
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
+vendor
