updated metadata on posts

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ remote_theme: "mmistakes/minimal-mistakes"
 permalink: /:categories/:title/
 paginate: 5
 paginate_path: /page:num/
-timezone: "Europe/Amsterdam"
+timezone: Europe/Amsterdam
 
 
 include:
