--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 twitter_username: sudeshjethoe
 github_username:  sudeshjethoe
 
-minimal_mistakes_skin: default
+minimal_mistakes_skin: air
 search: true
 
 # build settings
@@ -23,7 +23,7 @@ remote_theme: "mmistakes/minimal-mistakes"
 # output
 permalink: /:categories/:title/
 paginate: 5
-paginate_path: /page:num/
+paginate_path: /blog/page:num/
 timezone: Europe/Amsterdam
 
 
