--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 main:
   - title: "About Me"
     url: /about/
+  - title: "Portfolio"
+    url: /portfolio/
   - title: "Blog"
     url: /posts/
   - title: "Tags"
