--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
     url: /about/
   - title: "Portfolio"
     url: /portfolio/
-  - title: "Blog"
-    url: /posts/
+  - title: "Articles"
+    url: /articles/
   - title: "Tags"
     url: /tags/
   - title: "Contact"
