renamed blogs to articles, moved portfolio to posts, simpler naming of main pages, added headers for pages

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,5 +7,7 @@ main:
     url: /articles/
   - title: "Tags"
     url: /tags/
+  - title: "My Events"
+    url: /events/
   - title: "Contact"
     url: /contact/
