--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ remote_theme: "mmistakes/minimal-mistakes"
 # output
 permalink: /:categories/:title/
 paginate: 5
-paginate_path: /blog/page:num/
+paginate_path: /articles/page:num/
 timezone: Europe/Amsterdam
 
 # site logo on frontpage
@@ -73,13 +73,14 @@ footer:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/sudeshjethoe"
 
-# portolio category
-collections:
-  portfolio:
-    output: true
-    permalink: /:collection/:path/
-
 defaults:
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
   # _posts
   - scope:
       path: ""
@@ -94,25 +95,18 @@ defaults:
       comments: true
       share: true
       related: true
-  # _pages
-  - scope:
-      path: "_pages"
-      type: pages
-    values:
-      layout: single
-      author_profile: true
   # _portfolio
   - scope:
       path: ""
-      type: portfolio
+      type: posts
     values:
       # additional classes for styling portfolio pages
       classes:
         - portfoliopost
       layout: single
+      read_time: true
       author_profile: false
       share: true
-
 
 category_archive:
   type: liquid
