--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,13 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 
 ######### SOCIAL SETTINGS ###################
+# google: analytics
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "UA-97485794-1"
+    anonymize_ip: true
+
 # google: social links in google search results
 social:
   type: Person
