--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ author:
        url:   "https://wa.me/31634069057?text=Hi+Sudesh%2c+I+would+like+to+get+in+touch+with+you+for%3a+"
      - label: "My Resume"
        icon:  "fas fa-file-pdf"
-       url:   "/assets/cv.pdf"
+       url:   "/assets/documents/cv.pdf"
      - label: "LinkedIn"
        icon:  "fab fa-fw fa-linkedin"
        url:   "https://www.linkedin.com/in/sudeshjethoe"
