added consent framework

--- a/_config.yml
+++ b/_config.yml
@@ -96,6 +96,9 @@ footer:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/sudeshjethoe"
 
+after_footer_scripts:
+  - /assets/js/cookie-consent.js
+
 defaults:
   # _pages
   - scope:
