--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,13 @@ og_image: "/apple-touch-icon.png"
 minimal_mistakes_skin: air
 search: true
 
+#markdown: CommonMarkGhPages
+#commonmark:
+#  options: ["SMART", "FOOTNOTES"]
+#  extensions: ["strikethrough", "autolink", "table", "tagfilter"]
+
 markdown: kramdown
+
 remote_theme: "mmistakes/minimal-mistakes"
 # output
 permalink: /:categories/:title/
@@ -63,6 +69,7 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
   - jemoji
+  # - jekyll-commonmark-ghpages
 
 ######### BEGIN SITE FRONT DEFAULTS ##########
 author:
@@ -109,18 +116,21 @@ defaults:
       author_profile: true
   # _posts
   - scope:
-      path: ""
+      path: "_posts"
       type: posts
     values:
       layout: single
+      author_profile: true
       # additional classes for styling blogposts
       classes:
         - blogpost
-      author_profile: true
       read_time: true
       comments: true
       share: true
       related: true
+      toc: true
+      toc_sticky: true
+      toc_label: Contents
   # _portfolio
   - scope:
       path: ""
@@ -134,9 +144,10 @@ defaults:
       author_profile: false
       share: true
 
-category_archive:
-  type: liquid
-  path: /categories/
 tag_archive:
   type: liquid
   path: /tags/
+category_archive:
+  type: liquid
+  path: /
+  # path: /categories/
