--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 analytics:
   provider: "google-gtag"
   google:
-    # tracking_id: "UA-97485794-1"
-    tracking_id: "G-LF2VBS5NQT"
+    tracking_id: "UA-97485794-1"
     anonymize_ip: true
 
 # google: social links in google search results
